--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ mysqlclient==1.3.13
 Pillow==5.2.0
 pip==18.0
 pytz==2018.5
-requests==2.19.1
+requests>=2.20.0
 setuptools==40.4.1
 six==1.11.0
 Unidecode==1.0.22
