--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2018.8.24
 chardet==3.0.4
 Django==2.0.8
 django-disqus==0.5
+django-filter>=2.0.0
 django-modelcluster==4.2
 django-taggit==0.23.0
 django-treebeard==4.3
@@ -10,6 +11,7 @@ django-webpack-loader==0.6.0
 djangorestframework==3.8.2
 draftjs-exporter==2.1.2
 elasticsearch>=2.0.0,<3.0.0
+graphene-django>=2.2.0
 html5lib==1.0.1
 idna==2.7
 mysqlclient==1.3.13
